2005-01-13 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp: fix whitespace problem that
	caused compile failure.

	* configure.ac, Makefile.am, mk/common.mk: Do detection of haddock and
	add --enable-docs to configure. First hash at building haddock docs -
	gtk package only so far. Also move some defines from Makefile.am to
	configure.ac as requested by a FIXME comment.

	* mk/chsDepend.in: add extra check to the chsDepend script (disabled).
	Dare anyone to enable it and watch the build break! We still have some
	issues with the NAME make var being set incorrectly. I have a plan to
	replace the cunning NAME hack with a different hack.

	* configure.ac, Makefile.am: get everything to be installed under
	$pkglibdir rather than $libdir (ie $prefix/gtk2hs/*).
	Fix building of .hs.uncpp files needed for haddock (add to SUFFIXs).
	Get all doc files to be installed. I'm not sure where the html docs
	should be installed however, it's $(datadir)/doc/gtk2hs/html for now.

	* tools/c2hs/c/CParser.hs: allow c2hs to cope with (and ignore)
	multiple __atribute__ annotations. Required for glib-2.6.

2005-01-12 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, gtk/Graphics/UI/Gtk/Pango/Rendering.chs.pp,
	gtk/Graphics/UI/Gtk/Pango/Enums.chs.pp: Renames both files from
	.chs to .chs.pp and changed the Makefile accordingly. Preprocessing
	is now necessary to accommodate the lack of some enum names in
	Gtk 2.2.

	* tools/hierarchyGen/hierarchy.list: Only create the FileChooser
	interface object when building for Gtk 2.4 or higher.

2005-01-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/hello/World.hs: update to work with the new module names.

	* demo/hello/Makefile: a simple makefile. The old makefile relied on
	the old build system. This makefile will not build in-place it
	requires everything to be installed.

	* tools/apiGen/ApiGen.hs, tools/apiGen/format-docs.xsl,
	tools/apiGen/gen-all.sh, tools/apiGen/Template.chs: add support for