@@ -5,11 +5,11 @@ with contributions from
 Manuel M. T. Chakravarty <chak@cse.unsw.edu.au>
 (c2hs and some sources and techniques)
 
-Jens Petersen <petersen@haskell.org>
-(RPMs and tons of other stuff)
-
 Duncan Coutts <duncan@coutts.uklinux.net>
 (GtkSourceView, libglade)
+
+Jens Petersen <petersen@haskell.org>
+(RPMs and tons of other stuff)
 
 JP Bernardy <jyp_7@yahoo.com>
 Jonas Svensson <d99josve@dtek.chalmers.se>
